<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dragView"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="musiccase.ru.musiccase.MenuActivity">

    <LinearLayout
        android:id="@+id/linear_layout_menu"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            xmlns:sothree="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/menu_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            sothree:theme="@style/AppThemeMenu"
            android:layout_width="match_parent"/>
        <LinearLayout
            android:paddingTop="16dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_logo">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_logo"
                    android:id="@+id/imageViewLogo"
                    android:paddingBottom="2dp"
                    android:layout_weight="2" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/musiccase_ru"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewLogo"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_vk">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_vk"
                    android:id="@+id/imageViewVk"
                    android:paddingTop="2dp"
                    android:layout_weight="2" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/vk_com_music_case"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewVk"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_telegram">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_telegram"
                    android:id="@+id/imageViewTelegram"
                    android:layout_weight="2" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/t_me_musiccase"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewTelegram"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_instagram">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_instagram"
                    android:id="@+id/imageViewInstagram"
                    android:layout_weight="2" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/instagram_com_music_case"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewInstagram"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_facebook">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_facebook"
                    android:id="@+id/imageViewFacebook"
                    android:layout_weight="2" />

                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/facebook_com_musiccase"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewFacebook"
                    android:layout_weight="1" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#d7d5d5"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="55"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_contacs">

                <ImageView
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_dog"
                    android:id="@+id/imageViewDog"
                    android:layout_weight="2" />

                <TextView
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewDog"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_share">

                <ImageView
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_share"
                    android:id="@+id/imageViewShare"
                    android:layout_weight="2" />

                <TextView
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/_share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewShare"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/field_problem">

                <ImageView
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_problem"
                    android:id="@+id/imageViewProblem"
                    android:layout_weight="2" />

                <TextView
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/_problem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewProblem"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="musiccase.ru.musiccase.PlayerFragment"
        android:id="@+id/menu_fragment_player"/>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
